--- a/Train.ipynb
+++ b/Train.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 6,
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 9,
       "metadata": {
         "collapsed": true,
         "id": "134d3860"
@@ -797,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 11,
       "metadata": {
         "collapsed": true,
         "id": "yzEuyuUthy-b"
@@ -930,7 +930,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -959,7 +959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 12,
       "metadata": {
         "id": "zq7qIM7GAYkL"
       },
@@ -986,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1376,7 +1376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1468,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 15,
       "metadata": {
         "collapsed": true,
         "id": "3qi-y8r0tedh"
@@ -1507,7 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 16,
       "metadata": {
         "id": "3eeffc8a"
       },
@@ -1525,7 +1525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1983,7 +1983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -2050,7 +2050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -2205,7 +2205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 20,
       "metadata": {
         "id": "54b64132"
       },
@@ -2233,7 +2233,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26968\\2519625764.py:8: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_25644\\2519625764.py:8: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2275,7 +2275,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26968\\2519625764.py:28: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_25644\\2519625764.py:28: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2331,7 +2331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -2384,7 +2384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -2410,7 +2410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -2445,7 +2445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -2482,7 +2482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -2509,7 +2509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -2544,7 +2544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2603,7 +2603,7 @@
         "\n",
         "#chia bộ dữ liệu đã qua resample và loại bỏ outliers ra làm 2 phần 70/30\n",
         "\n",
-        "X_resampled_cleaned_outliers_train, X_resampled_cleaned_outliers_test, y_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_test = train_test_split(X_resampled_cleaned_outliers, y_resampled_cleaned_outliers, test_size=0.3, random_state=42, stratify=y_resampled_cleaned_outliers)\n",
+        "X_resampled_cleaned_outliers_train, X_resampled_test, y_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_test = train_test_split(X_resampled_cleaned_outliers, y_resampled_cleaned_outliers, test_size=0.3, random_state=42, stratify=y_resampled_cleaned_outliers)\n",
         "print(f\"Số lượng mẫu trong tập huấn luyện (sau khi resample và loại bỏ ngoại lệ): {X_resampled_cleaned_outliers_train.shape[0]}\")\n",
         "print(f\"Số lượng mẫu trong tập kiểm tra (sau khi resample và loại bỏ ngoại lệ): {X_resampled_cleaned_outliers_test.shape[0]}\")\n",
         "print(f\"Số lượng mẫu trong tập huấn luyện theo lớp (sau khi resample và loại bỏ ngoại lệ):\\n{y_resampled_cleaned_outliers_train.value_counts()}\")\n",
@@ -2633,7 +2633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -2691,7 +2691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -2746,7 +2746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2789,10 +2789,10 @@
       "source": [
         "# Dùng data đã qua resample và loại bỏ outliers để train model\n",
         "model = LogisticRegression(max_iter=1000)\n",
-        "model.fit(X_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_train)\n",
-        "y_pred = model.predict(X_resampled_cleaned_outliers_test)\n",
+        "model.fit(X_resampled_train, y_resampled_train)\n",
+        "y_pred = model.predict(X_resampled_test)\n",
         "print(\"Báo cáo phân loại:\")\n",
-        "print(classification_report(y_resampled_cleaned_outliers_test, y_pred))\n",
+        "print(classification_report(y_resampled_test, y_pred))\n",
         "print(\"Ma trận nhầm lẫn:\")\n",
         "print(confusion_matrix(y_resampled_cleaned_outliers_test, y_pred))\n",
         "print(confusion_matrix(y_resampled_cleaned_outliers_test, y_pred))\n",
@@ -2808,7 +2808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -2851,7 +2851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -2890,7 +2890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2937,7 +2937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -2976,7 +2976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -3014,7 +3014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3059,7 +3059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -3111,7 +3111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -3161,7 +3161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3211,7 +3211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -3290,6 +3290,196 @@
         "print(\"\\nLogistic Regression sau tinh chỉnh:\")\n",
         "print(classification_report(y_resampled_test, y_pred_lr_best))\n",
         "print(f\"Độ chính xác: {accuracy_score(y_resampled_test, y_pred_lr_best):.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Báo cáo phân loại:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.87      0.97      0.92       370\n",
+            "           1       0.63      0.24      0.35        71\n",
+            "\n",
+            "    accuracy                           0.85       441\n",
+            "   macro avg       0.75      0.61      0.63       441\n",
+            "weighted avg       0.83      0.85      0.83       441\n",
+            "\n",
+            "Ma trận nhầm lẫn:\n",
+            "[[360  10]\n",
+            " [ 54  17]]\n",
+            "Độ chính xác của mô hình: 0.8549\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\ADMIN\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [13:32:09] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Huấn luyện mô hình XGBoost với dữ liệu chỉ qua tiền xử lý \n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "\n",
+        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
+        "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
+        "model_xgb.fit(X_train, y_train)\n",
+        "y_pred_xgb = model_xgb.predict(X_test)\n",
+        "\n",
+        "print(\"Báo cáo phân loại:\")\n",
+        "print(classification_report(y_test, y_pred_xgb))\n",
+        "print(\"Ma trận nhầm lẫn:\")\n",
+        "print(confusion_matrix(y_test, y_pred_xgb))\n",
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_test, y_pred_xgb):.4f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Báo cáo phân loại:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.91      0.90      0.91       370\n",
+            "           1       0.90      0.92      0.91       370\n",
+            "\n",
+            "    accuracy                           0.91       740\n",
+            "   macro avg       0.91      0.91      0.91       740\n",
+            "weighted avg       0.91      0.91      0.91       740\n",
+            "\n",
+            "Ma trận nhầm lẫn:\n",
+            "[[333  37]\n",
+            " [ 31 339]]\n",
+            "Độ chính xác của mô hình: 0.9081\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\ADMIN\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [13:30:47] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample \n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "\n",
+        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
+        "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
+        "model_xgb.fit(X_resampled_train, y_resampled_train)\n",
+        "y_pred_xgb = model_xgb.predict(X_resampled_test)\n",
+        "\n",
+        "print(\"Báo cáo phân loại:\")\n",
+        "print(classification_report(y_resampled_test, y_pred_xgb))\n",
+        "print(\"Ma trận nhầm lẫn:\")\n",
+        "print(confusion_matrix(y_resampled_test, y_pred_xgb))\n",
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_resampled_test, y_pred_xgb):.4f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Báo cáo phân loại:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.92      0.88       193\n",
+            "           1       0.91      0.82      0.86       192\n",
+            "\n",
+            "    accuracy                           0.87       385\n",
+            "   macro avg       0.87      0.87      0.87       385\n",
+            "weighted avg       0.87      0.87      0.87       385\n",
+            "\n",
+            "Ma trận nhầm lẫn:\n",
+            "[[178  15]\n",
+            " [ 35 157]]\n",
+            "Độ chính xác của mô hình: 0.8701\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\ADMIN\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [13:22:54] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+          ]
+        }
+      ],
+      "source": [
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "\n",
+        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
+        "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
+        "model_xgb.fit(X_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_train)\n",
+        "y_pred_xgb = model_xgb.predict(X_resampled_cleaned_outliers_test)\n",
+        "\n",
+        "print(\"Báo cáo phân loại:\")\n",
+        "print(classification_report(y_resampled_cleaned_outliers_test, y_pred_xgb))\n",
+        "print(\"Ma trận nhầm lẫn:\")\n",
+        "print(confusion_matrix(y_resampled_cleaned_outliers_test, y_pred_xgb))\n",
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_resampled_cleaned_outliers_test, y_pred_xgb):.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mô hình và bộ dữ liệu đã được lưu thành công.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Lưu mô hình đã huấn luyện sử dụng joblib\n",
+        "import joblib\n",
+        "joblib.dump(best_rf, 'best_random_forest_model.pkl')\n",
+        "joblib.dump(best_lr, 'best_logistic_regression_model.pkl')\n",
+        "joblib.dump(model_knn, 'best_knn_model.pkl')\n",
+        "joblib.dump(model_dt, 'best_decision_tree_model.pkl')\n",
+        "# Lưu các bộ dữ liệu đã xử lý\n",
+        "df.to_csv('processed_dataset.csv', index=False)\n",
+        "df_resampled.to_csv('resampled_dataset.csv', index=False)\n",
+        "df_resampled_outliers.to_csv('resampled_cleaned_outliers_dataset.csv', index=False)\n",
+        "print(\"Mô hình và bộ dữ liệu đã được lưu thành công.\")\n",
+        "# Load mô hình và dự đoán lại để kiểm tra\n",
+        "loaded_rf = joblib.load('best_random_forest_model.pkl')\n",
+        "loaded_lr = joblib.load('best_logistic_regression_model.pkl')\n",
+        "loaded_knn = joblib.load('best_knn_model.pkl')\n",
+        "loaded_dt = joblib.load('best_decision_tree_model.pkl')\n"
       ]
     }
   ],
