--- a/Train.ipynb
+++ b/Train.ipynb
@@ -3054,7 +3054,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Mô hình KNN"
+        "# Xây dựng mô hình KNN \n"
       ]
     },
     {
@@ -3290,6 +3290,13 @@
         "print(\"\\nLogistic Regression sau tinh chỉnh:\")\n",
         "print(classification_report(y_resampled_test, y_pred_lr_best))\n",
         "print(f\"Độ chính xác: {accuracy_score(y_resampled_test, y_pred_lr_best):.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Xây dựng mô hình XGBoost\n"
       ]
     },
     {
