--- a/Train.ipynb
+++ b/Train.ipynb
@@ -793,6 +793,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for col in categorical_cols:\n",
+        "    unique_values = df[col].unique()\n",
+        "    print(f\"Giá trị duy nhất trong cột '{col}': {unique_values}\")\n",
+        "    df[col] = df[col].str.strip().str.lower()   # Loại bỏ khoảng trắng và chuyển về chữ thường  \n",
+        "    unique_values_after = df[col].unique()\n",
+        "    print(f\"Giá trị duy nhất trong cột '{col}' sau khi xử lý: {unique_values_after}\")"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1701,8 +1715,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "*Mã hóa biến mục tiêu \"Attrition\" thành 0/1 và xử lý mã hóa các biến phân loại*"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "3eeffc8a"
       },
@@ -1928,21 +1949,23 @@
         }
       ],
       "source": [
-        "# Encode the target variable 'Attrition'\n",
+        "# Mã hóa biến mục tiêu 'Attrition' thành 0/1\n",
         "df['Attrition'] = df['Attrition'].map({'Yes': 1, 'No': 0})\n",
         "\n",
-        "# Identify categorical columns (excluding 'Attrition' as it's already encoded)\n",
+        "# Lọc ra các biến phân loại còn lại mà có kiểu dữ liệu là object\n",
         "categorical_cols = df.select_dtypes(include='object').columns\n",
         "\n",
-        "# Apply encoding to the remaining categorical columns\n",
+        "# Áp dụng xử lý mã hóa các biến phân loại\n",
         "for col in categorical_cols:\n",
         "    if df[col].nunique() == 2:\n",
-        "        # Apply Label Encoding for binary columns\n",
+        "        # Áp dụng Label Encoding cho các cột có 2 giá trị duy nhất\n",
         "        le = LabelEncoder()\n",
         "        df[col] = le.fit_transform(df[col])\n",
         "    else:\n",
-        "        # Apply One-Hot Encoding for columns with more than two unique values\n",
+        "        # Áp dụng One-Hot Encoding cho các cột có nhiều hơn 2 giá trị duy nhất\n",
         "        df = pd.get_dummies(df, columns=[col], drop_first=True)\n",
+        "\n",
+        "df = df.astype(int)\n",
         "\n",
         "display(df.head())"
       ]
@@ -1961,7 +1984,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Tổng quan về tình "
+        "*Tổng quan về tình hình nghỉ việc của nhân viên*"
       ]
     },
     {
@@ -2318,6 +2341,18 @@
         "sns.heatmap(corr_matrix, annot=False, cmap='coolwarm', linewidths=0.5)\n",
         "plt.title('Heatmap Ma trận tương quan các biến')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "print(\"Phân phối của biến mục tiêu 'Attrition':\")\n",
+        "print(df['attrition'].value_counts(normalize=True))\n",
+        "print(df['attrition'].value_counts())"
       ]
     },
     {
