--- a/Train.ipynb
+++ b/Train.ipynb
@@ -42,14 +42,22 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "import joblib\n",
+        "import math\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from sklearn.preprocessing import LabelEncoder\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score"
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "from pytorch_tabnet.tab_model import TabNetClassifier\n",
+        "import lightgbm as lgb\n",
+        "from sklearn.svm import SVC\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier"
       ]
     },
     {
@@ -468,9 +476,7 @@
       "source": [
         "# Lấy các biến số (loại trừ biến kiểu bool)\n",
         "filtered_numerical_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
-        "\n",
         "# Tính số hàng và cột cho subplot\n",
-        "import math\n",
         "num_plots = len(filtered_numerical_cols)\n",
         "cols = 5\n",
         "rows = math.ceil(num_plots / cols)\n",
@@ -600,7 +606,6 @@
       "outputs": [],
       "source": [
         "# chia bộ dữ liệu ra làm 2 phần 70/30 để huấn luyện mô hình\n",
-        "from sklearn.model_selection import train_test_split\n",
         "X = df.drop('Attrition', axis=1)\n",
         "y = df['Attrition']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
@@ -649,18 +654,15 @@
       "outputs": [],
       "source": [
         "# Huấn luyện mô hình Logistic Regression và đánh giá\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
         "model = LogisticRegression(max_iter=1000)\n",
         "model.fit(X_train, y_train)\n",
         "y_pred = model.predict(X_test)\n",
-        "print(\"Báo cáo phân loại:\")\n",
+        "print(\"Báo cáo phân loại:\") \n",
         "print(classification_report(y_test, y_pred))\n",
         "print(\"Ma trận nhầm lẫn:\")\n",
         "print(confusion_matrix(y_test, y_pred))\n",
         "print(confusion_matrix(y_test, y_pred))\n",
-        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_test, y_pred):.4f}\")\n",
-        "\n"
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_test, y_pred):.4f}\")"
       ]
     },
     {
@@ -713,9 +715,6 @@
       "outputs": [],
       "source": [
         "# Huấn luyện mô hình Decision Tree và đánh giá\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-        "\n",
         "model_dt = DecisionTreeClassifier(random_state=42)\n",
         "model_dt.fit(X_train, y_train)\n",
         "\n",
@@ -838,7 +837,6 @@
       "outputs": [],
       "source": [
         "#huấn luyện mô hình KNN (K-Nearest Neighbors) với điểm k chạy từ 1 tới 30\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
         "best_k = 1\n",
         "best_accuracy = 0\n",
         "for k in range(1, 31):\n",
@@ -930,7 +928,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
         "\n",
         "# Tinh chỉnh mô hình sử dụng GridSearchCV cho Random Forest và Logistic Regression\n",
         "\n",
@@ -986,10 +983,6 @@
       "outputs": [],
       "source": [
         "# Huấn luyện mô hình XGBoost với dữ liệu chỉ qua tiền xử lý \n",
-        "from xgboost import XGBClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-        "\n",
-        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
         "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
         "model_xgb.fit(X_train, y_train)\n",
         "y_pred_xgb = model_xgb.predict(X_test)\n",
@@ -998,7 +991,7 @@
         "print(classification_report(y_test, y_pred_xgb))\n",
         "print(\"Ma trận nhầm lẫn:\")\n",
         "print(confusion_matrix(y_test, y_pred_xgb))\n",
-        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_test, y_pred_xgb):.4f}\")\n"
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_test, y_pred_xgb):.4f}\")"
       ]
     },
     {
@@ -1007,11 +1000,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample \n",
-        "from xgboost import XGBClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-        "\n",
-        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
+        "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample\n",
         "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
         "model_xgb.fit(X_resampled_train, y_resampled_train)\n",
         "y_pred_xgb = model_xgb.predict(X_resampled_test)\n",
@@ -1020,7 +1009,7 @@
         "print(classification_report(y_resampled_test, y_pred_xgb))\n",
         "print(\"Ma trận nhầm lẫn:\")\n",
         "print(confusion_matrix(y_resampled_test, y_pred_xgb))\n",
-        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_resampled_test, y_pred_xgb):.4f}\")\n"
+        "print(f\"Độ chính xác của mô hình: {accuracy_score(y_resampled_test, y_pred_xgb):.4f}\")"
       ]
     },
     {
@@ -1029,9 +1018,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from xgboost import XGBClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-        "\n",
         "# Huấn luyện mô hình XGBoost với dữ liệu đã qua resample và loại bỏ outliers\n",
         "model_xgb = XGBClassifier(eval_metric='logloss', use_label_encoder=False, random_state=42)\n",
         "model_xgb.fit(X_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_train)\n",
@@ -1115,9 +1101,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Huấn luyện mô hình SVM\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "# Huấn luyện mô hình SVMmodel_svm = SVC(random_state=42)\n",
         "model_svm = SVC(random_state=42)\n",
         "model_svm.fit(X_train, y_train)\n",
         "y_pred_svm = model_svm.predict(X_test)\n",
@@ -1134,7 +1118,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import lightgbm as lgb\n",
         "# Huấn luyện mô hình LightGBM với dữ liệu đã qua resample\n",
         "model_lgb = lgb.LGBMClassifier(random_state=42)\n",
         "model_lgb.fit(X_resampled_train, y_resampled_train)\n",
@@ -1152,7 +1135,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import lightgbm as lgb\n",
         "# Huấn luyện mô hình LightGBM với dữ liệu đã qua resample và loại bỏ outliers\n",
         "model_lgb = lgb.LGBMClassifier(random_state=42)\n",
         "model_lgb.fit(X_resampled_cleaned_outliers_train, y_resampled_cleaned_outliers_train)\n",
@@ -1178,7 +1160,6 @@
       "outputs": [],
       "source": [
         "# Huấn luyện mô hình Tabnet\n",
-        "from pytorch_tabnet.tab_model import TabNetClassifier\n",
         "model_tabnet = TabNetClassifier(random_state=42)\n",
         "model_tabnet.fit(X_train.values, y_train.values, max_epochs=100, patience=10, batch_size=1024, virtual_batch_size=128)\n",
         "y_pred_tabnet = model_tabnet.predict(X_test.values)\n",
@@ -1237,7 +1218,6 @@
       "outputs": [],
       "source": [
         "# Lưu mô hình đã huấn luyện sử dụng joblib\n",
-        "import joblib\n",
         "joblib.dump(best_rf, 'best_random_forest_model.pkl')\n",
         "joblib.dump(best_lr, 'best_logistic_regression_model.pkl')\n",
         "joblib.dump(model_knn, 'best_knn_model.pkl')\n",
