--- a/Train.ipynb
+++ b/Train.ipynb
@@ -30,7 +30,13 @@
         "*   **Pandas**\n",
         "*   **Numpy**\n",
         "*   **Matplotlib**\n",
-        "*   **Seaborn**"
+        "*   **Seaborn**\n",
+        "*   **Matplotlib**\n",
+        "*   **Imblearn**\n",
+        "*   **Sklearn**\n",
+        "*   **LightGBM**\n",
+        "*   **XGBoost**\n",
+        "*   **Pytorch Tabnet**"
       ]
     },
     {
@@ -39,19 +45,7 @@
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pytorch_tabnet'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtree\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DecisionTreeClassifier\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m classification_report, confusion_matrix, accuracy_score\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mpytorch_tabnet\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtab_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TabNetClassifier\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[34;01mlightgbm\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[34;01mlgb\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msvm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SVC\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pytorch_tabnet'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import joblib\n",
@@ -59,6 +53,8 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import shap\n",
+        "import tensorflow as tf\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -603,6 +599,13 @@
         "print(df['Attrition'].value_counts(normalize=True))\n",
         "print(df['Attrition'].value_counts())"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
