--- a/Train.ipynb
+++ b/Train.ipynb
@@ -66,7 +66,8 @@
     "from sklearn.svm import SVC\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import roc_auc_score, roc_curve\n"
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -383,6 +384,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do việc dùng IQR để loại bỏ các ngoại lệ trong dataset gây ra sự giảm sút lớn về mặt dữ liệu mẫu (loại bỏ đến 50% mẫu) nên sẽ dùng thêm phương pháp cắt tỉa winsorizing đặt các giá trị ngoại lai về 1 ngưỡng chứ không xóa bỏ hoàn toàn giá trị ngoại lai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dùng phương pháp winsorizing để xử lý ngoại lệ\n",
+    "from scipy.stats.mstats import winsorize\n",
+    "for col in numerical_cols:\n",
+    "    df[col] = winsorize(df[col], limits=[0.05, 0.05])\n",
+    "    # Cắt tỉa 5% ở hai đầu\n",
+    "    # Giữ lại 90% dữ liệu ở giữa, thay thế 5% giá trị nhỏ nhất và lớn nhất bằng ngưỡng tương ứng\n",
+    "    print(f\"Cột '{col}' đã được xử lý ngoại lệ bằng phương pháp winsorizing.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -618,6 +641,29 @@
     "print(f\"Số lượng mẫu trong tập kiểm tra (chỉ 12 đặc trưng quan trọng nhất): {X_top_12_test.shape[0]}\")\n",
     "print(f\"Số lượng mẫu trong tập huấn luyện theo lớp (chỉ 12 đặc trưng quan trọng nhất):\\n{y_top_12_train.value_counts()}\")\n",
     "print(f\"Số lượng mẫu trong tập kiểm tra theo lớp (chỉ 12 đặc trưng quan trọng nhất):\\n{y_top_12_test.value_counts()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thực hiện Feature Scaling tập X để chuẩn hóa dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Thực hiện Feature Scaling tập X để chuẩn hóa dữ liệu\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "X_cleaned_outliers_train = scaler.transform(X_cleaned_outliers_train)\n",
+    "X_cleaned_outliers_test = scaler.transform(X_cleaned_outliers_test)\n",
+    "X_top_12_train = scaler.fit_transform(X_top_12_train)\n",
+    "X_top_12_test = scaler.transform(X_top_12_test)"
    ]
   },
   {
@@ -1436,7 +1482,7 @@
     "    'max_depth': [None, 10, 20, 30],\n",
     "    'min_samples_split': [2, 5, 10]\n",
     "}\n",
-    "grid_rf = GridSearchCV(RandomForestClassifier(random_state=42), param_grid_rf, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_rf = GridSearchCV(RandomForestClassifier(random_state=42), param_grid_rf, cv=5, scoring='f1_weighted', n_jobs=-1)\n",
     "grid_rf.fit(X_resampled_train, y_resampled_train)\n",
     "print(f\"Best parameters for Random Forest: {grid_rf.best_params_}\")\n",
     "print(f\"Best accuracy for Random Forest: {grid_rf.best_score_:.4f}\")\n",
@@ -1446,7 +1492,7 @@
     "    'C': [0.01, 0.1, 1, 10, 100],\n",
     "    'solver': ['lbfgs', 'liblinear']\n",
     "}\n",
-    "grid_lr = GridSearchCV(LogisticRegression(max_iter=1000), param_grid_lr, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_lr = GridSearchCV(LogisticRegression(max_iter=1000), param_grid_lr, cv=5, scoring='f1_weighted', n_jobs=-1)\n",
     "grid_lr.fit(X_resampled_train, y_resampled_train)\n",
     "print(f\"Best parameters for Logistic Regression: {grid_lr.best_params_}\")\n",
     "print(f\"Best accuracy for Logistic Regression: {grid_lr.best_score_:.4f}\")\n",
