--- a/Train.ipynb
+++ b/Train.ipynb
@@ -944,6 +944,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lưu lại các mô hình đã build"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n=== CẬP NHẬT CÁC MÔ HÌNH LƯU TRONG LIST\")\n",
+    "update_champion_list(model, \"LogisticRegression\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_dt, \"DecisionTree\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_rf, \"RandomForest\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_knn, \"KNN\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_xgb, \"XGBoost\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_lgb, \"LightGBM\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "update_champion_list(model_svm, \"SVM\", \"1_Dataset_Goc\", X_test, y_test)\n",
+    "# (TabNet cần xử lý X_test_tabnet riêng)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
